# miniplatform

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake_modules/: FindSFML.cmake
includes/miniplatform/: effect.h  entities.h  game.h  level.h  level_map.h  settings.h
src/: effect.cpp  entities.cpp  game.cpp  level.cpp  level_map.cpp
